syntax = "proto3";

package api.houyi.strategy;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "strategy.proto";

option go_package = "github.com/aide-family/moon/api/houyi/strategy;strategy";
option java_multiple_files = true;
option java_package = "api.houyi.strategy";

// 告警策略下发通道
service Strategy {
  rpc PushStrategy(PushStrategyRequest) returns (PushStrategyReply) {
    option (google.api.http) = {
      post: "/v1/strategy/push"
      body: "*"
    };
  }
}

message PushStrategyRequest {
  repeated MetricStrategyItem strategies = 1 [(buf.validate.field).cel = {
    id: "PushStrategyRequest_strategies_lte10",
    expression: "this.size() <= 10"
    message: "策略列表不能超过10个"
  }];
  // 域名监控策略
  repeated DomainStrategyItem domainStrategies = 2 [(buf.validate.field).cel = {
    id: "PushStrategyRequest_domain_strategies_lte10",
    expression: "this.size() <= 10"
    message: "域名策略列表不能超过10个"
  }];
  // http资源点策略
  repeated HttpStrategyItem httpStrategies = 3 [(buf.validate.field).cel = {
    id: "PushStrategyRequest_http_strategies_lte10",
    expression: "this.size() <= 10"
    message: "HTTP策略列表不能超过10个"
  }];
  // ping 策略
  repeated PingStrategyItem pingStrategies = 4 [(buf.validate.field).cel = {
    id: "PushStrategyRequest_ping_strategies_lte10",
    expression: "this.size() <= 10"
    message: "PING策略列表不能超过10个"
  }];
  // MQ 策略
  repeated MQStrategyItem mqStrategies = 5 [(buf.validate.field).cel = {
    id: "PushStrategyRequest_mq_strategies_lte10",
    expression: "this.size() <= 10"
    message: "MQ策略列表不能超过10个"
  }];
}
message PushStrategyReply {}
