syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "conf/conf.proto";

option go_package = "github.com/aide-family/moon/api;api";
option java_multiple_files = true;
option java_package = "api";

// 服务通信模块
service Server {
	// 获取服务信息
	rpc GetServerInfo (GetServerInfoRequest) returns (GetServerInfoReply) {
		option (google.api.http) = {
			get: "/v1/server/info"
		};
	}

	//获取服务列表
	rpc GetServerList(GetServerListRequest) returns(GetServerListReply){
		option(google.api.http) = {
			get:"/v1/server/list"
		};
	}

	// 心跳
	rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply) {
		option (google.api.http) = {
			post: "/v1/server/heartbeat"
			body: "*"
		};
	}


}

message GetServerListRequest{
	string type = 1;
}

message GetServerListReply {
	repeated  ServerItem list = 1;
}

message GetServerInfoRequest {
	string name = 1;
}
message GetServerInfoReply {
	repeated ServerItem list = 1;
}

message ServerItem {
	string version = 1;
	pkg.conf.Server server = 2;
}

message HeartbeatRequest {
	pkg.conf.MicroServer server = 1;
	repeated uint32 teamIds = 2;
	// 上线还是下线
	bool online = 3;
}
message HeartbeatReply {}
